correction pic-index

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<div class="capa">
 
 		<div class="profile-pic">
-			<img src="img/profile-pic.jpg" width="400" height="400" alt="Foto de Ivan Gomes">
+			<img src="img/profile-pic.jpg" width="400"alt="Foto de Ivan Gomes">
 		</div>
 
 		<div class="profile-title">
