--- a/curriculo.html
+++ b/curriculo.html
@@ -83,7 +83,7 @@
 
 		<h3>FRONT-END</h3>
 
-		<p>HTML5/ CSS3/ JAVASCRIPT/ BOOTSTRAP/ WORDPRESS</p>
+		<p>HTML5/ CSS3/ JAVASCRIPT/ JQUERY/ AJAX/ BOOTSTRAP/ WORDPRESS</p>
 
 		<h3>BACK-END</h3>
 
