--- a/curriculo.html
+++ b/curriculo.html
@@ -87,7 +87,7 @@
 
 		<h3>BACK-END</h3>
 
-		<p>PHP7+/ LARAVEL/ PDO/ DOCTRINE/ LUMEN/ SIMFONI</p>
+		<p>PHP7+/ LARAVEL/ PDO/ DOCTRINE/ LUMEN REST API</p>
 
 		<h3>DEVOPS</h3>
 
