--- a/portfolio.html
+++ b/portfolio.html
@@ -52,16 +52,16 @@
 
 
 
-		<!-- <div style="background-image: url('img/ccb.jpg')" class="miniatura">
-			<a href="">
+		<div style="background-image: url('img/capa2.png')" class="miniatura">
+			<a href="wedesign.html">
 				<div class="blackbox">
 					<div class="blackbox-text">
-						<h1>Centro Cultural Brasileiro</h1>
-						<h2>Web Design</h2>
+						<h1>WeDesign</h1>
+						<h2>Desenvolvimento Web</h2>
 					</div>
 				</div>
 			</a>
-		</div> -->
+		</div> 
 
 
 		<!-- <div class="miniatura">
