--- a/webdesign-ccb.html
+++ b/webdesign-ccb.html
@@ -50,6 +50,10 @@
 
         <img class="foto-trabalhos" src="img/trabalhos/ccb3.jpg" alt="">
 
+       
+
+        <p> Obs: Projeto fictício, criado apenas para fins didaticos, e construção deste portfolio.</p>
+
         <a class="back-link" href="portfolio.html">&larr; Voltar ao portfolio<a></a>
     </div>
 
