add-project-correcao

--- a/wedesign.html
+++ b/wedesign.html
@@ -38,7 +38,7 @@
 
         <h2>Descrição do projeto</h2>
 
-        <p>A WeDesign é uma agencia de publicidade com foco em desenvolvimento de produtos para web.</p>
+        <p>A WeDesign é uma agência de publicidade com foco em desenvolvimento de produtos para web.</p>
 
         <img class="foto-trabalhos" src="img/trabalhos/webdesign2.jpg" alt="">
 
