--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 		<div class="profile-title">
 			<h1>David <span>Souza de Almeida</span></h1>
-			<h2>Desenvolvedor Web - DevOps</h2>
+			<h2>Desenvolvedor Web</h2>
 		</div>
 	</div>
 
