--- a/webdesign-ccb.html
+++ b/webdesign-ccb.html
@@ -52,7 +52,7 @@
 
        
 
-        <p> Obs: Projeto fictício, criado apenas para fins didaticos, e construção deste portfolio.</p>
+        <p> Obs: Projeto fictício, criado apenas para fins didáticos e construção deste portfólio.</p>
 
         <a class="back-link" href="portfolio.html">&larr; Voltar ao portfolio<a></a>
     </div>
