--- a/wedesign.html
+++ b/wedesign.html
@@ -48,11 +48,11 @@
 
         <img class="foto-trabalhos" src="img/trabalhos/webdesign3.jpg" alt="">
 
-        <p>A pagina pode ser encontrada<a class="back-link" href="https://davidcod3r.github.io/wedesign/"> aqui</a></p>
+        <p>A pagína pode ser encontrada<a class="back-link" href="https://davidcod3r.github.io/wedesign/"> aqui</a></p>
 
-        <p> Obs: Projeto fictício, criado apenas para fins didaticos, e construção deste portfolio.</p>
+        <p> Obs: Projeto fictício, criado apenas para fins didáticos e construção deste portfólio.</p>
 
-        <a class="back-link" href="portfolio.html">&larr; Voltar ao portfolio<a></a>
+        <a class="back-link" href="portfolio.html">&larr; Voltar ao portfólio<a></a>
     </div>
 
     <script src="js/scripts.js"></script>
