--- a/portfolio.html
+++ b/portfolio.html
@@ -39,12 +39,12 @@
 		<h1>Portfolio</h1>
 
 
-		<div style="background-image: url('img/ccb.jpg')" class="miniatura">
-			<a href="webdesign-ccb.html">
+		<div style="background-image: url('img/t-shirts-mini.png')" class="miniatura">
+			<a href="t-shirts.html">
 				<div class="blackbox">
 					<div class="blackbox-text">
-						<h1>Centro Cultural Brasileiro</h1>
-						<h2>Web Design</h2>
+						<h1>T-shirts</h1>
+						<h2>FrontEnd</h2>
 					</div>
 				</div>
 			</a>
