--- a/t-shirts.html
+++ b/t-shirts.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400&display=swap" rel="stylesheet">
-    <title>Web design - Centro Cultural Brasileiro</title>
+    <title>T-shirts - Pagína de orçamentos</title>
 </head>
 
 <body>
@@ -29,28 +29,22 @@
             <li>></li>
             <li><a href="portfolio.html">Portfolio</a></li>
             <li>></li>
-            <li>Centro de Cultura brasileiro</li>
+            <li>T-shirts</li>
         </ul>
 
-        <h1>Centro de Cultura Brasileiro</h1>
+        <h1>T-shirts</h1>
 
-        <img class="foto-trabalhos" src="img/trabalhos/ccb1.jpg" alt="">
+        <img class="foto-trabalhos" src="img/trabalhos/t-shirts.png" alt="">
 
         <h2>Descrição do projeto</h2>
 
-        <p>O CCB é uma escola de português localizada em Guayaquil, Equador. Atualmente sou editor da página de
-            Facebook e trabalhei na criação do funil de vendas da empresa. Este projeto de Web Design consiste na
-            modernização do antigo site, deixando-o mais moderno, responsivo e funcional.</p>
+        <p>A T-shirts, foi uma pagína criada com intuito de resolver um desafio de  um curso de Jquery.</p>
 
-        <img class="foto-trabalhos" src="img/trabalhos/ccb2.jpg" alt="">
+        <img class="foto-trabalhos" src="img/trabalhos/t-shirt2.png" alt="">
 
-        <p> O objetivo principal deste novo site é captar dados de potenciais clientes e segmentá-los por
-            disponibilidade de horário e localidade, para realização de campanhas de vendas futuras. O formulário de
-            contato é integrado com um serviço de gestão de campanhas de e-mail marketing. </p>
+        <br>
 
-        <img class="foto-trabalhos" src="img/trabalhos/ccb3.jpg" alt="">
-
-       
+        <p>A pagína pode ser encontrada<a class="back-link" href="https://davidcod3r.github.io/T-shirts/"> aqui</a></p>
 
         <p> Obs: Projeto fictício, criado apenas para fins didáticos e construção deste portfólio.</p>
 
