--- a/wedesign.html
+++ b/wedesign.html
@@ -29,7 +29,7 @@
             <li>></li>
             <li><a href="portfolio.html">Portfolio</a></li>
             <li>></li>
-            <li>Centro de Cultura brasileiro</li>
+            <li>WeDesign</li>
         </ul>
 
         <h1>WeDesign</h1>
