--- a/t-shirts.html
+++ b/t-shirts.html
@@ -38,13 +38,13 @@
 
         <h2>Descrição do projeto</h2>
 
-        <p>A T-shirts, foi uma pagína criada com intuito de resolver um desafio de  um curso de Jquery.</p>
+        <p>A T-shirts foi uma página criada com intuito de resolver o desafio de um curso de Jquery.</p>
 
         <img class="foto-trabalhos" src="img/trabalhos/t-shirt2.png" alt="">
 
         <br>
 
-        <p>A pagína pode ser encontrada<a class="back-link" href="https://davidcod3r.github.io/T-shirts/"> aqui</a></p>
+        <p>A página pode ser encontrada<a class="back-link" href="https://davidcod3r.github.io/T-shirts/"> aqui</a></p>
 
         <p> Obs: Projeto fictício, criado apenas para fins didáticos e construção deste portfólio.</p>
 
