--- a/wedesign.html
+++ b/wedesign.html
@@ -48,7 +48,7 @@
 
         <img class="foto-trabalhos" src="img/trabalhos/webdesign3.jpg" alt="">
 
-        <p>A pagína pode ser encontrada<a class="back-link" href="https://davidcod3r.github.io/wedesign/"> aqui</a></p>
+        <p>A página pode ser encontrada<a class="back-link" href="https://davidcod3r.github.io/wedesign/"> aqui</a></p>
 
         <p> Obs: Projeto fictício, criado apenas para fins didáticos e construção deste portfólio.</p>
 
