--- a/curriculo.html
+++ b/curriculo.html
@@ -96,7 +96,7 @@
 
 
 
-		<h2>Experiência de Trabalho</h2>
+		<!-- <h2>Experiência de Trabalho</h2>
 		<hr>
 
 		<h3>data-data</h3>
@@ -109,13 +109,9 @@
 
 		<h3>data-data</h3>
 
-		<p>Função - empresa - local</p>
+		<p>Função - empresa - local</p> -->
 
-
-
-
-		
-
+		<br>
 
 		<a class="back-link" href="index.html">&larr; Voltar ao início<a>
 
